--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "koa": "^2.3.0",
     "marked": "^0.3.6",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15",
-    "vuebar": "^0.0.17"
+    "source-map-support": "^0.4.15"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
