--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "koa": "^2.3.0",
     "marked": "^0.3.6",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "vue-awesome-swiper": "^2.6.7"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
