--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
     "scmp": "^2.0.0",
-    "less-loader": "^4.0.5",
-    "less": "^2.7.3"
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   }
 }
