--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "backpack-core": "^0.3.0",
-    "eslint": "^3.13.1",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
-    "scmp": "^2.0.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "scmp": "^2.0.0"
   }
 }
