--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cross-env": "^5.0.1",
     "highlight.js": "^9.12.0",
     "koa": "^2.3.0",
-    "marked": "^0.3.6",
+    "markdown-it": "^8.4.0",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-katex": "^2.0.3",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15"
   },
