--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "cross-env": "^5.0.1",
     "highlight.js": "^9.12.0",
     "koa": "^2.3.0",
+    "koa-session": "^5.7.0",
     "markdown-it": "^8.4.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-katex": "^2.0.3",
-    "nuxt": "^1.0.0-rc11",
+    "nuxt": "^1.0.0",
     "offline-plugin": "^4.8.5"
   },
   "devDependencies": {
