--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "backpack dev",
     "build": "nuxt build && backpack build",
+    "analyze": "nuxt build -a && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
@@ -16,12 +17,14 @@
     "cross-env": "^5.0.1",
     "highlight.js": "^9.12.0",
     "koa": "^2.3.0",
+    "koa-compress": "^2.0.0",
     "markdown-it": "^8.4.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-katex": "^2.0.3",
     "nuxt": "^1.0.0",
-    "offline-plugin": "^4.8.5"
+    "offline-plugin": "^4.8.5",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
