--- a/package.json
+++ b/package.json
@@ -17,14 +17,12 @@
     "cross-env": "^5.0.1",
     "highlight.js": "^9.12.0",
     "koa": "^2.3.0",
-    "koa-compress": "^2.0.0",
     "markdown-it": "^8.4.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-katex": "^2.0.3",
     "nuxt": "^1.0.0",
-    "offline-plugin": "^4.8.5",
-    "zlib": "^1.0.5"
+    "offline-plugin": "^4.8.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
