--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown-it-katex": "^2.0.3",
     "nuxt": "^1.0.0",
     "offline-plugin": "^4.8.5",
+    "popper.js": "^1.12.9",
     "source-map-support": "^0.5.0",
     "velocity-animate": "^1.5.1"
   },
